--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "wordfall-project-freedom",
+  "name": "wordfall-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/msh4izee/WordFall-Multiplayer.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/msh4izee/WordFall-Multiplayer/issues"
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
-  "homepage": "https://github.com/msh4izee/WordFall-Multiplayer#readme",
   "dependencies": {
+    "an-array-of-english-words": "^2.0.0",
+    "gsap": "^3.11.4",
+    "lodash": "^4.17.21",
+    "pixi.js": "^7.1.1"
   }
 }
