--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "an-array-of-english-words": "^2.0.0",
+    "fontfaceobserver": "^2.3.0",
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
     "pixi.js": "^7.1.1"
